# WEC_23_Programming

./: CMakeLists.txt  CSV_Solution.cpp  CSV_solution.cpp  DeliveryList.cpp  DeliveryList.h  JSON_Solution.cpp  Queue.cpp  Queue.h  README.md  TruckList.cpp  TruckList.h  Trucks.cpp  Trucks.h  main.cpp  stage1-2.py  stage3-5.py
